# weather

./: .env-dist  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
app/templates/: base.html
app/templates/index/: index.html
report/: weather_data.csv
tests/: __init__.py  test_cities.py  test_weather.py
weather/: __init__.py  cities.py  gateway.py  helper.py  routes.py  weather.py
weather/templates/: base.html
weather/templates/index/: index.html
