[tool.poetry]
name = "weather"
version = "1.0.0"
description = "Web Scraping, Data Processing, and CSV Export."
authors = ["Vladimir <avdeevvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
flask = "3.1.0"
flask-caching = "2.3.0"
pytest = "8.3.4"
pytest-dotenv = "0.5.2"
python-dotenv = "1.0.1"
pandas = "2.2.3"
matplotlib = "3.10.0"
pytest-cov = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=weather --cov-report=html --cov-report=html"
